@@ -6514,11 +6514,11 @@ function get_nonsystem_data_input($data_input_id) {
 	return $diid;
 }
 
-function get_rrdtool_version() {
+function get_rrdtool_version($force = false) {
 	static $version = '';
 
 	if ($version == '') {
-		$version = str_replace('rrd-', '', str_replace('.x', '.0', read_config_option('rrdtool_version') ?: read_default_config_option('rrdtool_version') ?: '1.4.0' ));
+		$version = str_replace('rrd-', '', str_replace('.x', '.0', read_config_option('rrdtool_version', $force) ?: read_default_config_option('rrdtool_version') ?: '1.4.0' ));
 	}
 
 	return $version;
