@@ -24,6 +24,7 @@ Cacti CHANGELOG
 -issue#5323: Cosmetic error in the system utilities - rebuild poller cache - description
 -issue#5329: Upon displaying a form with errors, the session error fields variable isn't cleared
 -issue#5333: MariaDB stopped supporting GET_LOCK in cluster
+-issue#5336: RRDtool update failures when Data Template data sources don't match Graph Template data sources in use
 -issue#5338: Compatibility changes for Boost under PHP 8.1
 -issue#5342: Increase keyup delay when searching the tree
 -issue#5347: Device form location drop down not populating
